--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Portfolio de Biosinergia - Innovación en cultivo sostenible" />
-  <title>Biosinergia Portfolio</title>
-</head>
-<body>
-  <div id="root"></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio de Biosinergia - Innovación en cultivo sostenible"
+    />
+    <title>Biosinergia</title>
+
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo.png" />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
